language/move-lang/tests/move_check/parser/expr_abort_missing_value.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/expr_abort_missing_value.move:5:5
  │
5 │     }
  │     ^
  │     │
  │     Unexpected '}'
  │     Expected an expression term

